--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tool for parsing and tracking pet lodge data",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Ben Chi",
   "license": "ISC",
