--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "googleapis": "^39.2.0"
+    "googleapis": "^39.2.0",
+    "inquirer": "^7.0.0",
+    "inquirer-recursive": "0.0.6"
   }
 }
