Added a commandline interface with color using chalk

--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "paradise-pet-lodge",
   "version": "1.0.0",
   "description": "Tool for parsing and tracking pet lodge data",
-  "main": "index.js",
+  "bin": "interface.js",
+  "main": "interface.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node interface.js"
   },
   "author": "Ben Chi",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "googleapis": "^39.2.0",
-    "inquirer": "^7.0.0",
-    "inquirer-recursive": "0.0.6"
+    "chalk": "^2.4.2",
+    "cheerio": "^1.0.0-rc.3"
   }
 }
