--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "bin": "interface.js",
   "main": "interface.js",
   "scripts": {
-    "start": "node interface.js"
+    "start": "node index.js"
+  },
+  "pkg": {
+    "scripts": "*.js",
+    "assets": "./schedules",
+    "targets": [
+      "node10"
+    ]
   },
   "author": "Ben Chi",
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.2",
-    "cheerio": "^1.0.0-rc.3"
+    "cheerio": "^1.0.0-rc.3",
+    "csv-parser": "^2.3.0",
+    "googleapis": "^43.0.0"
   }
 }
