--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "paradise-pet-lodge",
   "version": "1.0.0",
   "description": "Tool for parsing and tracking pet lodge data",
-  "bin": "interface.js",
-  "main": "interface.js",
+  "bin": "index.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "pkg": {
     "scripts": "*.js",
-    "assets": "./schedules",
+    "assets": ["./schedules", "./employees"],
     "targets": [
       "node10"
     ]
