Added automatic file moving

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@ schedules
 node_modules
 schedules
 schedules2
+schedules_archive
 employees
 employees2
+employees_archive
 paradise-pet-lodge.exe
 credentials.json
 token.json
